# jenkins-mcp-server

./: .gitignore  README.md  pyproject.toml
src/jenkins_mcp/: __init__.py
