[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jenkins-mcp-server"
version = "0.1.0"
description = "MCP server for Jenkins automation server integration"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "asklokesh", email = "asklokesh@example.com" }
]
dependencies = [
    "python-jenkins>=1.8.0",
    "httpx>=0.24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "asyncio>=3.4.3",
    "lxml>=4.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "ruff>=0.1.0",
    "responses>=0.20.0"
]

[project.scripts]
jenkins-mcp = "jenkins_mcp.server:main"